2007-04-05  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_sound_handler.cpp: fixed one more stream sound bug

2007-04-05  Vitaly Alexeev <tishka92@yahoo.com>

	* base/tu_file.cpp: new tu_file("http://...") returns
	m_data=NULL if there was a failure
	* gameswf/a lot of files: removed useless restart(),
	fixed stream sound bug that have been showing up 
	at movie with one frame, the operations that are executed at removing
	dlist object moved to remove() function
	* net/http_client.*
	* net/net_interface_tcp.cpp: porting to Linux

2007-04-03  Vitaly Alexeev <tishka92@yahoo.com>

	* net/http_client.cpp,
	* net/net_interface_tcp.cpp: porting to Linux

2007-04-03  Vitaly Alexeev <tishka92@yahoo.com>

	* a lot of files: removed useless progress_bar stuff &
	the calling of useless get_movie_info().
	The movie file is opened only once. It is important for network

2007-04-03  Vitaly Alexeev <tishka92@yahoo.com>

	* net/http_client.cpp: sprintf() ==> snprintf()

2007-04-03  Vitaly Alexeev <tishka92@yahoo.com>

	* net/http_client.cpp: forgot to cleanup

2007-04-03  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_test_ogl.cpp: s_total_tags is commented out
	to not read two times *.swf from network
	* net/http_client.*,
	* net/net_inetrface_tcp.cpp,
	* net/net_interface.h: Stabilization of http-tu_file

2007-04-01  Vitaly Alexeev <tishka92@yahoo.com>

	* net/http_client.*: fixed eof()
	some http server not send the Content-Length headers

2007-04-01  Vitaly Alexeev <tishka92@yahoo.com>

	The implementation of tu_file that support HTTP is finished
	* gameswf/gameswf_impl.cpp: use_cache_files = false (because of net files)
	* net/http_client.*,
	* net/net_inetrface_tcp.cpp,
	* net/net_interface.h:
	implementation of tu_file that support HTTP is done
	* net/test_client.cpp: added HTTP file gruber
	* net/win32/VC8/test_client.vcproj: added VC8 project file
	that grub HTTP files

2007-03-29  Vitaly Alexeev <tishka92@yahoo.com>
